hphp/test/zend/bad/Zend/tests/objects_013.php
<?php

interface foo {
}

class bar implements foo, foo {
}	

echo "Done\n";
?>